ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kaltura-nginx-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
  - http:
      paths:

      - pathType: Prefix
        path: /
        backend:
          service:
            name: kaltura-nginx-service
            port:
              number: 80
